apps/inbox/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inbox
spec:
  selector:
    matchLabels:
      app: inbox
      tier: api
  replicas: 1
  template:
    metadata:
      labels:
        app: inbox
        tier: api
    spec:
      containers:
      - name: inbox
        image: quicklookup/inbox:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9090
          name: http
        - containerPort: 2222
          name: sftp
        restartPolicy: Never
        volumeMounts:
          - mountPath: /tmp
            name: sftp
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: sftp
          hostPath:
            path: /data/local/sftp
