apps/inbox/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inbox
spec:
  serviceName: inbox
  selector:
    matchLabels:
      app: inbox
      tier: api
  replicas: 2
  template:
    metadata:
      labels:
        app: inbox
        tier: api
    spec:
      containers:
      - name: inbox
        image: quicklookup/inbox
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 9090
          name: http
        - containerPort: 2222
          name: sftp
        volumeMounts:
          - mountPath: /tmp
            name: sftp
          - mountPath: /data/dlq
            name: dlq-data
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: sftp
          hostPath:
            path: /data/local/sftp
  volumeClaimTemplates:
  - metadata:
      name: dlq-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 10Gi
